:hammer: Refactor: Move App.tex to src folder

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "nodejs-mobile-react-native": "^0.8.1",
     "react": "18.0.0",
     "react-native": "0.69.4"
   },
