--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodejs-mobile-react-native": "^0.8.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-navigation": "^4.4.4"
