--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-device-info": "^10.0.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-network-info": "^5.2.1",
+    "react-native-ping": "^1.2.7",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-navigation": "^4.4.4"
