--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/netinfo": "^9.3.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "axios": "^0.27.2",
     "nodejs-mobile-react-native": "^0.8.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
