--- a/ios/Flow4NetworkTestApp/Info.plist
+++ b/ios/Flow4NetworkTestApp/Info.plist
@@ -60,5 +60,13 @@
 				</array>
 			</dict>
 		</array>
+		<key>UIAppFonts</key>
+		<array>
+				<string>fonts/FontAwesome.ttf</string>
+				<string>fonts/Ionicons.ttf</string>
+				<string>fonts/Foundation.ttf</string>
+				<string>fonts/MaterialCommunityIcons.ttf</string>
+				<string>fonts/MaterialIcons.ttf</string>
+		</array>
 	</dict>
 </plist>
