--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-ping": "^1.2.7",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
