:hammer: Reafactor: Change tests sctructure and generate object with results

--- a/ios/Flow4NetworkTestApp/Info.plist
+++ b/ios/Flow4NetworkTestApp/Info.plist
@@ -68,5 +68,10 @@
 				<string>fonts/MaterialCommunityIcons.ttf</string>
 				<string>fonts/MaterialIcons.ttf</string>
 		</array>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+				<key>NSAllowsArbitraryLoads</key>
+				<true/>
+		</dict>
 	</dict>
 </plist>
