--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-native-community/netinfo": "^9.3.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@types/react-native-video": "^5.0.14",
+    "@types/react-native-video-player": "^0.10.3",
     "axios": "^0.27.2",
+    "native-base": "^3.4.13",
     "nodejs-mobile-react-native": "^0.8.1",
     "react": "18.0.0",
     "react-native": "0.69.4",
@@ -24,6 +27,8 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^6.0.0-alpha.1",
+    "react-native-video-player": "^0.14.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
